class right needed to have a fixed value to be visible on other devices and browser and the nav bubble needed to be adjust

--- a/portfolio-hugo-varloud-meyer/src/components/Footer/Footer.css
+++ b/portfolio-hugo-varloud-meyer/src/components/Footer/Footer.css
@@ -169,7 +169,11 @@
     width: 70%;
     margin: 30px;
     font-size: 15px;
-}
+  }
+
+  .footer-menu {
+    height: 100vh;
+  }
 
   .social-btns .btn{
     width: 70px;
