--- a/portfolio-hugo-varloud-meyer/src/components/Navbar/Navbar.css
+++ b/portfolio-hugo-varloud-meyer/src/components/Navbar/Navbar.css
@@ -54,8 +54,8 @@ body {
   height: 48px;
   width: 48px;
   position: fixed;
-  right: 2.5vw;
-  top: 2%;
+  right: 1vw;
+  top: 1%;
   z-index: 9;
   background-color: #999d9e;
   color: white;
@@ -128,7 +128,8 @@ body {
   }
 
   .menu-icon {
-    top: 2%;
+    top: 1.5%;
+    right: 2%;
   }
 
   .close-icon {
